test/1.4/errors/T_EINVOVER_confidentiality.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

/// ERROR EINVOVER
param _confidentiality = 1;
